[metadata]
name = django-juno
version = 0.0.9
description = Integração do Django com a Juno.
long_description = file: README.md
url = https://github.com/alessandrak/django-juno
author = Alessandra Karine Carneiro
author_email = alessandra@rd2.ventures
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: